fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -2,7 +2,8 @@
 body{
 padding: 0;
 margin: 0;
-height: 100%;
+height: 100vh;
+width: 100vh;
 }
 
 h1 {
